--- a/config.toml
+++ b/config.toml
@@ -1,16 +1,57 @@
+title = "/kremovtort"
+
+author = "kremovtort"
+
 # The URL the site will be built for
 base_url = "https://kremovtort.github.io/blog"
+
+default_language = "en"
+generate_feeds = true
 
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
 
+theme = "tabi"
+
+taxonomies = [{name = "tags", feed = true}]
+
+[search]
+# Whether to include the title of the page/section in the index.
+include_title = true
+# Whether to include the description of the page/section in the index.
+include_description = true
+# Whether to include the path of the page/section in the index.
+include_path = true
+# Whether to include the rendered content of the page/section in the index.
+include_content = true
+# At which character to truncate the content to. Useful if you have a lot of pages and the index would
+# become too big to load on the site. Defaults to not being set.
+# truncate_content_length = 100
+# Whether to produce the search index as a javascript file or as a JSON file.
+# Accepted value "elasticlunr_javascript" or "elasticlunr_json".
+index_format = "elasticlunr_json"
+
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = true
+
+[languages.ru]
+title = "/kremovtort"
+build_search_index = true
+taxonomies = [{name = "tags", feed = true}]
+generate_feeds = true
 
 [markdown]
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
+bottom_footnotes = true
+# To use a Zola built-in theme, CSP needs to allow unsafe-inline for style-src.
+highlight_theme = "css"
+smart_punctuation = true
 
 [extra]
-# Put all your custom variables here
+mermaid = true
+menu = [
+    { name = "blog", url = "blog", trailing_slash = true },
+    { name = "tags", url = "tags", trailing_slash = true },
+]
